feat: implement loan scheduler and refine system architecture
- Add LoanScheduler cron job to automatically mark expired loans as OVERDUE
- Refactor BookController to route external API calls strictly through IBookService
- Implement robust double-check validation for overdue and expired active loans